[gd_scene load_steps=10 format=3 uid="uid://bdnijlionsghd"]

[ext_resource type="Theme" uid="uid://dui8cebqku8x5" path="res://interface/themes/olympic_theme.tres" id="1_bnhne"]
[ext_resource type="Script" uid="uid://h3goxkvpd4sv" path="res://godot4/ui/overlays/PauseOverlay.gd" id="2_22hpj"]
[ext_resource type="Texture2D" uid="uid://bcrncs8bt61iy" path="res://assets/UI/pause-window.png" id="2_hxyup"]
[ext_resource type="FontFile" uid="uid://dprehv4eo4p4u" path="res://assets/fonts/Pixel-Powerline-440555/Pixel Powerline.otf" id="3_g01oh"]
[ext_resource type="FontFile" uid="uid://cmvmqjwssraau" path="res://assets/fonts/Commando/commando.ttf" id="4_2ooet"]

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("3_g01oh")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/14/0/ascent = 0.0
cache/0/14/0/descent = 0.0
cache/0/14/0/underline_position = 0.0
cache/0/14/0/underline_thickness = 0.0
cache/0/14/0/scale = 1.0
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("4_2ooet")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/14/0/ascent = 0.0
cache/0/14/0/descent = 0.0
cache/0/14/0/underline_position = 0.0
cache/0/14/0/underline_thickness = 0.0
cache/0/14/0/scale = 1.0
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/48/0/ascent = 0.0
cache/0/48/0/descent = 0.0
cache/0/48/0/underline_position = 0.0
cache/0/48/0/underline_thickness = 0.0
cache/0/48/0/scale = 1.0
cache/0/52/0/ascent = 0.0
cache/0/52/0/descent = 0.0
cache/0/52/0/underline_position = 0.0
cache/0/52/0/underline_thickness = 0.0
cache/0/52/0/scale = 1.0

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("3_g01oh")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/14/0/ascent = 0.0
cache/0/14/0/descent = 0.0
cache/0/14/0/underline_position = 0.0
cache/0/14/0/underline_thickness = 0.0
cache/0/14/0/scale = 1.0
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0

[sub_resource type="GDScript" id="GDScript_oi8t0"]
script/source = "extends VBoxContainer

func _ready():
	disable()

func disable():
	for button in get_children():
		if button is Button:
			button.disabled = true

func enable():
	for button in get_children():
		if button is Button:
			button.disabled = false
	get_child(0).grab_focus()
"

[node name="PauseOverlay" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(834, 635)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bnhne")
script = ExtResource("2_22hpj")

[node name="BlackOverlay" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.588235)

[node name="Window" type="Sprite2D" parent="."]
modulate = Color(1.2, 1.2, 1.2, 1)
self_modulate = Color(0, 0.556863, 1, 1)
position = Vector2(651.635, 357.94)
scale = Vector2(0.745386, 0.745386)
texture = ExtResource("2_hxyup")

[node name="GuiElements" type="Control" parent="."]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.0
offset_top = -274.0
offset_right = 349.0
offset_bottom = 263.0

[node name="Title" type="Label" parent="GuiElements"]
modulate = Color(1.15, 1.15, 1.15, 1)
self_modulate = Color(0, 0.556863, 1, 1)
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -124.0
offset_top = -24.0
offset_right = 124.0
offset_bottom = 54.0002
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource("4")
theme_override_font_sizes/font_size = 22
text = "GAME PAUSED"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="GuiElements"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -338.5
offset_top = -456.0
offset_right = 339.5
offset_bottom = -21.0

[node name="Minigame" type="Label" parent="GuiElements/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 0.870588, 0.372549, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 52
text = "MINIGAME"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Description" type="Label" parent="GuiElements/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = SubResource("3")
theme_override_font_sizes/font_size = 22
text = "find the x and do the y"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Control" type="Control" parent="GuiElements/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="GuiElements/VBoxContainer"]
layout_mode = 2
alignment = 2
script = SubResource("GDScript_oi8t0")

[node name="Continue" type="Button" parent="GuiElements/VBoxContainer/Buttons"]
layout_mode = 2
text = "CONTINUE"

[node name="Restart" type="Button" parent="GuiElements/VBoxContainer/Buttons"]
visible = false
layout_mode = 2
text = "RESTART"

[node name="SkipLevel" type="Button" parent="GuiElements/VBoxContainer/Buttons"]
visible = false
layout_mode = 2
text = "SKIP THIS MATCH"

[node name="Options" type="Button" parent="GuiElements/VBoxContainer/Buttons"]
visible = false
layout_mode = 2
text = "OPTIONS"

[node name="Control" type="Control" parent="GuiElements/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Quit1" type="Button" parent="GuiElements/VBoxContainer/Buttons"]
visible = false
layout_mode = 2
text = "QUIT TO CARDS"

[node name="Quit2" type="Button" parent="GuiElements/VBoxContainer/Buttons"]
layout_mode = 2
text = "QUIT TO CHARACTER SELECTION"

[node name="Quit3" type="Button" parent="GuiElements/VBoxContainer/Buttons"]
visible = false
layout_mode = 2
text = "QUIT TO MAIN MENU"

[connection signal="pressed" from="GuiElements/VBoxContainer/Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="GuiElements/VBoxContainer/Buttons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="GuiElements/VBoxContainer/Buttons/SkipLevel" to="." method="_on_SkipLevel_pressed"]
[connection signal="pressed" from="GuiElements/VBoxContainer/Buttons/Quit1" to="." method="_on_Quit1_pressed"]
[connection signal="pressed" from="GuiElements/VBoxContainer/Buttons/Quit2" to="." method="_on_Quit2_pressed"]
[connection signal="pressed" from="GuiElements/VBoxContainer/Buttons/Quit3" to="." method="_on_Quit3_pressed"]
